--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -354,18 +354,19 @@ div {
 
 /* Contenu de la modal */
 .modal-content {
-    background-color: white;
+    background-color: #1e1e1e;
     padding: 20px;
     margin: 15% auto;
-    width: 50%;
+    width: 30%;
     border-radius: 5px;
+    border: none;
     position: relative;
 }
 
 /* Bouton de fermeture de la modal */
 .close-btn {
+    color: gray;
     position: absolute;
-    top: 10px;
     right: 10px;
     font-size: 20px;
     cursor: pointer;
