--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -214,6 +214,13 @@ div {
         padding: 1px;
     }
 
+    .modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%);
+    }
+
 }
 
 
@@ -357,7 +364,7 @@ div {
     background-color: #1e1e1e;
     padding: 30px;
     margin: 15% auto;
-    width: 30%;
+    width: 50%;
     border-radius: 5px;
     border: none;
     position: relative;
