--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -356,12 +356,13 @@ div {
 /* Contenu de la modal */
 .modal-content {
     background-color: #1e1e1e;
-    padding: 30px;
+    padding: 39px;
     margin: 15% auto;
     width: 50%;
     border-radius: 5px;
     border: none;
     position: relative;
+    top: 20%;
 }
 
 /* Bouton de fermeture de la modal */
