--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -142,7 +142,7 @@
 	</section>
 	{% include "../partials/error.twig" %}
 	{% block script %}
-		<script src="/../../assets/js/home.js"></script>
+		<script type="module" src="/../../assets/js/home.js"></script>
 		<script>
 	document.addEventListener("DOMContentLoaded", function () {
     const videos = document.querySelectorAll(".video");
