--- a/views/pages/register.twig
+++ b/views/pages/register.twig
@@ -69,7 +69,7 @@
 
 					<button type="submit">Essayer gratuitement</button>
 					<section>
-						<a href="/login">Ce connecter à
+						<a href="/login">Se connecter à
 							<span>PulseConnect</span>
 						</a>
 					</section>
