update content a propos

--- a/views/pages/blog.twig
+++ b/views/pages/blog.twig
@@ -11,11 +11,11 @@
 {% block main %}
 		<header>
 			<a href="/" class="back-arrow"><img src="/../../assets/imgs/flecheBack.png" alt="arrowBack"></a>
-			<h1><b>Collaborez et créez votre Musique en ligne<b></h1>
+			<h1><b>Plateforme de collaboration musicale en ligne<b></h1>
 		</header>
 
 		<section>
-			<h2>1. Pourquoi la collaboration en ligne révolutionne la musique ?</h2>
+			<h2>1. Pourquoi la plateforme de collaboration en ligne révolutionne la musique ?</h2>
 			<p>Les artistes et producteurs n'ont plus besoin d'être dans le même studio pour créer ensemble. Grâce à des
 				<strong>plateformes de collaboration musicale</strong>, vous pouvez composer, enregistrer et mixer vos morceaux
 				<strong>où que vous soyez, en temps réel</strong>.</p>
