--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -13,7 +13,7 @@
         <a href="https://x.com/PulseConnect13" target="_blank"><img src="/../../assets/imgs/logoX.png" alt=""></a>
         <a href="https://www.facebook.com/share/AWvbkRQcrszVbAWC/?mibextid=LQQJ4d" target="_blank"><img src="/../../assets/imgs/logoFacebook.png" alt=""></a>
         <a href="https://www.linkedin.com/in/pulse-connect-714a7333a/" target="_blank"><img src="/../../assets/imgs/logoLinkedin.png" alt=""></a>
-        <a href="https://discord.gg/wuWtJ6Mj" target="_blank"><img src="/../../assets/imgs/logoDiscord.png" alt=""></a>
+        <a href="https://discord.gg/EjHEVtc77g" target="_blank"><img src="/../../assets/imgs/logoDiscord.png" alt=""></a>
         <a href="https://t.me/PulseConnect" target="_blank"><img src="/../../assets/imgs/logoTelegram.png" alt=""></a>
     </div>
 </footer>
